<resources>
    <string name="app_name">MoneyManager</string>
    <string name="title_activity_main">MoneyManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="msg_incorrectPin">Pin is incorrect!</string>
    <string name="msg_minLengthPin">Minimum length is 4</string>
    <string name="msg_pinMismatch">PINs do not match!</string>
    <string name="encryptString">true</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="confirm_your_pin">Confirm your pin</string>
    <string name="create_pin">Create pin</string>
    <string name="log_in">Log in</string>
    <string name="select_a_category">[Select a category...]</string>
    <string name="create_category">Create category</string>
    <string name="category_name">Category name</string>
    <string name="details">Details</string>
    <string name="create_record">Create record</string>
    <string name="item_name">Item name</string>
    <string name="amount">Amount</string>
    <string name="sun_apr_10_2016">Sun, Apr 10, 2016</string>
    <string name="divider">Divider</string>
    <string name="filter_categories">Filter categories</string>
    <string name="order_by">Order by:</string>
    <string name="direction">Direction:</string>
    <string name="filter_records">Filter records</string>
    <string name="time_period">Time period:</string>
    <string name="sun_apr_11_2016">Sun, Apr 11, 2016</string>
    <string name="value_sign">Value sign</string>
    <string name="icon">Icon</string>
    <string name="app_icon">App Icon</string>
    <string name="money_manager">Money Manager</string>
    <string name="starting_balance">Starting balance:</string>
    <string name="ending_balance">Ending balance:</string>
    <string name="incomes">Incomes:</string>
    <string name="expenses">Expenses:</string>
    <string name="records">Records</string>
    <string name="categories">Categories</string>
    <string name="statistics">Statistics</string>
    <string name="sync">Sync...</string>
    <string name="export">Export...</string>
    <string name="filter">Filter</string>
    <string name="db_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="datepicker_date_format">EEE, MMM d, yyyy</string>
    <string name="yyyy_MM_dd">yyyy-MM-dd</string>
    <string name="yyyy_MM">yyyy-MM</string>
    <string name="MM_dd">MM/dd</string>
    <string name="MM_yy">MM/yy</string>

    <!--<array name="currencies">-->
        <!--<item>czk</item>-->
        <!--<item>eur</item>-->
        <!--<item>usd</item>-->
    <!--</array>-->

    <string-array name="records_sort_by">
    <item>Amount</item>
    <item>Date</item>
    <item>Name</item>
    <item>Category</item>
</string-array>

    <string-array name="categories_sort_by">
        <item>Name</item>
        <item>Details</item>
    </string-array>


    <array name="item_array">
        <item>Balance</item>
        <item>Activity</item>
    </array>
</resources>
