<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:onClick="onFilterClick"
        android:orderInCategory="1"
        android:title="@string/filter"
        app:showAsAction="ifRoom"
        />


    <item
        android:id="@+id/action_export"
        android:onClick="onExportClick"
        android:orderInCategory="100"
        android:title="@string/export"
        android:icon="@mipmap/ms_excel"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_sync"
        android:onClick="onSyncClick"
        android:orderInCategory="100"
        android:title="@string/sync"
        android:icon="@mipmap/drive_logo"
        app:showAsAction="never" />

</menu>
