<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/filterRecords_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/filter_records"
        android:textSize="24sp" />


    <Spinner
        android:id="@+id/filterRecords_orderBy"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/filterRecords_title"
        android:layout_marginTop="0dp"
        />

    <TextView
        android:id="@+id/filterRecords_orderBy_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/filterRecords_title"
        android:layout_marginTop="14dp"
        android:text="@string/order_by"
        android:textColor="@color/colorAccent"
        />

    <Spinner
        android:id="@+id/filterRecords_direction"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/filterRecords_orderBy"
        android:layout_marginTop="0dp"/>

    <TextView
        android:id="@+id/filterRecords_direction_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/filterRecords_orderBy"
        android:layout_marginTop="14dp"
        android:text="@string/direction"
        android:textColor="@color/colorAccent"
        />

    <Button
        android:id="@+id/filterRecords_date_from"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/filterRecords_direction"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:paddingStart="6dp"
        android:text="@string/sun_apr_10_2016"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/filterRecords_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/filterRecords_direction"
        android:layout_marginTop="14dp"
        android:text="@string/time_period"
        android:textColor="@color/colorAccent"
        />

    <Button
        android:id="@+id/filterRecords_date_to"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/filterRecords_date_label"
        android:layout_marginStart="2dp"
        android:layout_marginTop="0dp"
        android:paddingStart="6dp"
        android:text="@string/sun_apr_11_2016"
        android:textAlignment="viewStart" />


</RelativeLayout>